# RustTcc

./: pages.rar
back_end_final_v1/: Cargo.toml
back_end_final_v1/src/: main.rs
back_end_final_v1/static/CSS/: csshome.css  favs.css  ingredients.css  pag.css  qrcode.css
back_end_final_v1/static/javascript/: home.js
back_end_final_v1/templates/: favs.html.tera  home.html.tera  ingredients.html.tera  login.html.tera  qrcode.html
pages/: favoritos.html  home-r.html  login.html  pag-ingredientes.html  pag-receita.html  qrcode.html
pages/CSS/: csshome.css  favoritos.css  ingreientes.css  pag.css  qrcode.css  receita.css
